--- a/.drone.yml
+++ b/.drone.yml
@@ -4,3 +4,4 @@ pipeline:
     repo: dodoreg.azurecr.io/exporter/redis
     tags: drone-io-test
     registry: dodoreg.azurecr.io
+    secrets: [ docker_username, docker_password ]
