--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ pipeline:
   publish:
     image: plugins/docker
     repo: dodoreg.azurecr.io/exporter/redis
-    auto_tag: true
+    tags: drone-io-test
     registry: dodoreg.azurecr.io
     secrets: [ docker_username, docker_password ]
     storage_path: /drone/docker
