--- a/.drone.yml
+++ b/.drone.yml
@@ -1,16 +1,25 @@
+# pipeline:
+#   restore_cache:
+#     image: drillster/drone-volume-cache
+#     restore: true
+#     mount: /drone/docker
+#   publish:
+#     image: plugins/docker
+#     repo: dodoreg.azurecr.io/exporter/redis
+#     tags: drone-io-test
+#     registry: dodoreg.azurecr.io
+#     secrets: [ docker_username, docker_password ]
+#     storage_path: /drone/docker
+#   rebuild_cache:
+#     image: drillster/drone-volume-cache
+#     restore: true
+#     mount: /drone/docker
+
 pipeline:
-  restore_cache:
-    image: drillster/drone-volume-cache
-    restore: true
-    mount: /drone/docker
   publish:
-    image: plugins/docker
-    repo: dodoreg.azurecr.io/exporter/redis
-    tags: drone-io-test
-    registry: dodoreg.azurecr.io
-    secrets: [ docker_username, docker_password ]
-    storage_path: /drone/docker
-  rebuild_cache:
-    image: drillster/drone-volume-cache
-    restore: true
-    mount: /drone/docker
+    image: docker
+    commands:
+      - docker build .
+      - docker tag drone-io-test
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
