--- a/.drone.yml
+++ b/.drone.yml
@@ -1,26 +1,9 @@
 pipeline:
-#   restore_cache:
-#     image: drillster/drone-volume-cache
-#     restore: true
-#     mount: /drone/docker
-  # docker:
-  #   image: plugins/docker
-  #   repo: dodoreg.azurecr.io/exporter/redis
-  #   tags: drone-io-test
-  #   registry: dodoreg.azurecr.io
-  #   secrets: [ docker_username, docker_password ]
-  #   volumes:
-  #     - /var/run/docker.sock:/var/run/docker.sock
-    
-#   rebuild_cache:
-#     image: drillster/drone-volume-cache
-#     restore: true
-#     mount: /drone/docker
-
-pipeline:
-  publish:
-    image: docker
-    commands:
-      - docker build . -t drone-io-test
+  docker:
+    image: plugins/docker
+    repo: dodoreg.azurecr.io/exporter/redis
+    tags: drone-io-test
+    registry: dodoreg.azurecr.io
+    secrets: [ docker_username, docker_password ]
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
