--- a/.drone.yml
+++ b/.drone.yml
@@ -33,3 +33,8 @@ steps:
     volumes:
       - name: 2f7661722f72756e2f646f636b65722e736f636b
         path: /var/run/docker.sock
+
+volumes:
+  - name: 2f7661722f72756e2f646f636b65722e736f636b
+    host:
+      path: /var/run/docker.sock
