--- a/.github/workflows/on-push-to-master-dodo.yml
+++ b/.github/workflows/on-push-to-master-dodo.yml
@@ -1,4 +1,4 @@
-name: Build draft-release
+name: Build
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
         REPO_ORIGIN_VERSION: "1.12.1"
-        RELEASE_TAG: "${{ env.REPO_ORIGIN_VERSION }}.${{ github.run_number }}"
+        RELEASE_TAG: "${ REPO_ORIGIN_VERSION }.${{ github.run_number }}"
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -33,11 +33,11 @@ jobs:
           file: ./docker/Dockerfile.amd64
           tags: |
             dodopizza/redis_exporter:latest
-            dodopizza/redis_exporter:${{ env.REPO_ORIGIN_VERSION }}
-            dodopizza/redis_exporter:${{ env.RELEASE_TAG }}
+            dodopizza/redis_exporter:${ REPO_ORIGIN_VERSION }
+            dodopizza/redis_exporter:${ RELEASE_TAG }
           build-args: |
             SHA1=${{ github.sha }}
-            TAG=${{ env.RELEASE_TAG }}
+            TAG=${ RELEASE_TAG }
 
       - name: Create release
         id: create_release
@@ -45,7 +45,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.RELEASE_TAG }}
-          release_name: Release v${{ env.RELEASE_TAG }}
+          tag_name: ${ RELEASE_TAG }
+          release_name: Release v${ RELEASE_TAG }
           draft: false
           prerelease: false
