--- a/.github/workflows/on-push-to-master-dodo.yml
+++ b/.github/workflows/on-push-to-master-dodo.yml
@@ -17,6 +17,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # official docker actions block
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
@@ -37,6 +45,8 @@ jobs:
           build-args: |
             SHA1=${{ github.sha }}
             TAG=${{ env.RELEASE_TAG }}
+      
+      # - official docker actions block
 
       - name: Create release
         id: create_release
