--- a/.github/workflows/on-push-to-master-dodo.yml
+++ b/.github/workflows/on-push-to-master-dodo.yml
@@ -55,6 +55,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ env.RELEASE_TAG }}
-          release_name: Release v${{ env.RELEASE_TAG }}
+          release_name: dodopizza/redis_exporter:${{ env.RELEASE_TAG }}
           draft: false
           prerelease: false
